# geoengine-utils

./: CONTRIBUTING.md  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml  tests.yml
docs/: apis.md
docs/resources/: datasets.md  getting_started.md  raster.md  vector.md
src/geoengine_utils/: __init__.py  cli.py  validation.py
src/geoengine_utils/cloud/: __init__.py  cog.py  pmtiles.py  stac.py
src/geoengine_utils/crs/: __init__.py  country_lookup.py  models.py  recommend.py  registry.py  transform.py  validate.py
src/geoengine_utils/raster/: __init__.py  clip.py  convert.py  metadata.py  models.py  resample.py  stats.py  validate.py
src/geoengine_utils/utils/: __init__.py  bbox.py  crs.py  logging.py
src/geoengine_utils/validation/: __init__.py  readiness.py  report.py  schemas.py
src/geoengine_utils/vector/: __init__.py  convert.py  simplify.py  validate.py
src/scripts/: build_countries.py
tests/: conftest.py  create_test_data.py  test_cli.py  test_countries.py  test_crs.py  test_raster.py  test_raster_validation_rules.py  test_validation_cli.py  test_validation_framework.py  test_vector.py
tests/data/: test_dem.tif  test_polygon.geojson
