[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "geoengine-utils"
version = "0.1.0"
description = "Utilities for geospatial data workflows"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Your Name" }]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
geoengine_utils = [
    "data/*.parquet"
]

